// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrganizationPicker /> renders an organization list with only "None" as an option when no organizations are passed in. 1`] = `
<select
  id="someFormElementId"
  name="someFormElementName"
  onBlur={[MockFunction]}
>
  <option
    value=""
  >
    None
  </option>
</select>
`;

exports[`<OrganizationPicker /> renders with no organization selected when the organization ID is not set 1`] = `
<select
  id="someFormElementId"
  name="someFormElementName"
  onBlur={[MockFunction]}
>
  <option
    value=""
  >
    None
  </option>
  <option
    value={1}
  >
    Acme Org 1
  </option>
  <option
    value={2}
  >
    Acme Org 2
  </option>
</select>
`;

exports[`<OrganizationPicker /> renders with the given organization selected from the list of available organizations 1`] = `
<select
  id="someFormElementId"
  name="someFormElementName"
  onBlur={[MockFunction]}
>
  <option
    value=""
  >
    None
  </option>
  <option
    selected={true}
    value={1}
  >
    Acme Org 1
  </option>
  <option
    value={2}
  >
    Acme Org 2
  </option>
</select>
`;
